--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "start": "serve src",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo 'no test specified'",
     "deploy": "git push heroku master",
     "deploy:gh-pages": "gh-pages -d client",
     "deploy:client:-f": "git push heroku-client `git subtree split --prefix client master`:master --force",
